# shaka-packager-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example_claude_desktop_config.json  pyproject.toml  setup.py  shaka_packager_mcp.py  uvproject.yaml
tests/: __init__.py  conftest.py  test_basic.py
tests/fixtures/: .gitkeep  README.md
